--- a/admin/package.json
+++ b/admin/package.json
@@ -20,12 +20,14 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
